Revert "fix: center "Sobre Mi" heading and vertically align profile photo"
This reverts commit 64a7a818ca39cef6732980864fc20168dff9281b.

--- a/estilo.css
+++ b/estilo.css
@@ -143,16 +143,11 @@ section h2 {
   display: inline-block;
 }
 
-#about h2 {
-  display: block;
-  text-align: center;
-}
-
 /* Profile / About Section */
 .profile-container {
   display: flex;
   gap: 32px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .profile-photo {
